<resources>
    <string name="bt_cancel">Cancel</string>
    <string name="bt_show_qr_code">Show QR Code</string>
    <string name="bt_done">Done</string>
    <string name="txt_transfer_completed">Transfer Completed!</string>
    <string name="txt_list_of_documents">List of Documents:</string>
    <string name="txt_transferring">Transferring</string>
    <string name="txt_consent">Approve sending data to mDL verifier</string>
    <string name="bt_approve">Approve</string>
    <string name="nfc_engagement_service_desc">@string/app_name</string>
    <string name="nfc_data_transfer_service_desc">mDL NFC Data Transfer</string>
    <string name="engagement_aid_group_desc">mDL AID Group</string>
    <string name="bt_add_document">Add Document</string>
    <string name="bt_add_self_signed_document">Add self-signed document</string>
    <string name="txt_server_url">Enter the server URL</string>
    <string name="txt_provisioning_code">Enter the provisioning code</string>
    <string name="value_server_url">http://192.168.1.169:18013/mdlServer</string>
    <string name="value_provisioning_code">1001</string>
    <string name="bt_next">Next</string>
    <string name="txt_retrieving_data">Retrieving data</string>
    <string name="bt_ok">OK</string>
    <string name="bio_auth_title">Authenticate to share data</string>
    <string name="bio_auth_verifier_anonymous">Anonymous verifier is requesting the following information</string>
    <string name="bio_auth_verifier_trusted_with_name">Trusted verifier \"%1$s\" is requesting the following information</string>
    <string name="bio_auth_verifier_untrusted_with_name">Untrusted verifier \"%1$s\" is requesting the following information</string>
    <string name="bio_auth_use_pin">Use PIN</string>
    <string name="bio_auth_failed">User authentication has failed</string>
    <string name="fingerprint_removed_error">Biometric Authentication Error</string>
    <string name="fingerprint_removed_error_desc">Fingerprint was removed from the device so the credential cannot be shared anymore.</string>
    <string name="label_credential_shape">Credential Shape</string>
    <string name="label_document_name">Name</string>
    <string name="label_document_type">DocType</string>
    <string name="bt_check_for_update">Check for Update</string>
    <string name="bt_delete">Delete</string>
    <string name="label_date_provisioned">Date Provisioned</string>
    <string name="label_last_time_used">Last Time Used</string>
    <string name="label_mso_usage_count">MSO Usage Count</string>
    <string name="label_date_check_update">Last Update Check</string>
    <string name="toast_press_back_twice">Tap back button again to exit</string>
    <string name="bt_refresh_auth_keys">Refresh Auth Keys</string>
    <string name="label_refresh_auth_keys">Last Refresh Auth Keys</string>
    <string name="bt_present_documents">Present Documents</string>
    <string name="btn_log_delete_selected">Delete Selected</string>
    <string name="btn_log_delete_all">Delete All</string>
    <string name="family_name">Family Name</string>
    <string name="given_name">Given Names</string>
    <string name="birth_date">Date of birth</string>
    <string name="issue_date">Date of issue</string>
    <string name="expiry_date">Date of expiry</string>
    <string name="issuing_country">Issuing country</string>
    <string name="issuing_authority">Issuing authority</string>
    <string name="document_number">Licence number</string>
    <string name="portrait">Portrait of mDL holder</string>
    <string name="driving_privileges">Categories of vehicles</string>
    <string name="un_distinguishing_sign">UN distinguishing sign</string>
    <string name="administrative_number">Administrative number</string>
    <string name="sex">Sex</string>
    <string name="height">Height (cm)</string>
    <string name="weight">Weight (kg)</string>
    <string name="eye_colour">Eye colour</string>
    <string name="hair_colour">Hair colour</string>
    <string name="birth_place">Place of birth</string>
    <string name="resident_address">Permanent place of residence</string>
    <string name="portrait_capture_date">Portrait image timestamp</string>
    <string name="age_in_years">How old are you (in years)?</string>
    <string name="age_birth_year">In what year were you born?</string>
    <string name="age_over_18">Age over 18?</string>
    <string name="age_over_21">Age over 21?</string>
    <string name="issuing_jurisdiction">Issuing jurisdiction</string>
    <string name="nationality">Nationality</string>
    <string name="resident_city">Resident city</string>
    <string name="resident_state">Resident state</string>
    <string name="resident_postal_code">Resident postal code</string>
    <string name="resident_country">Resident country</string>
    <string name="family_name_national_character">Family name in national characters</string>
    <string name="given_name_national_character">Given name in national characters</string>
    <string name="signature_usual_mark">Signature / usual mark</string>
    <string name="aamva_sex">AAMVA Sex</string>
    <string name="EDL_credential">EDL Credential</string>
    <string name="DHS_compliance">DHS Compliance</string>
    <string name="registration_info">Vehicle Registration Information</string>
    <string name="registration_holder">Vehicle Registration Holder Information</string>
    <string name="basic_vehicle_info">Basic Vehicle Information</string>
    <string name="vin">Vehicle Identification Number</string>
    <string name="connection_mdoc_open">Connection to mdoc verifier is open</string>
    <string name="connection_mdoc_closed">Connection to mdoc verifier is closed</string>
    <string name="txt_documents_sent">%d request(s) served</string>
    <string name="micov_vtr_fn">Family Name</string>
    <string name="micov_vtr_gn">Given Name</string>
    <string name="micov_vtr_dob">Date of Birth</string>
    <string name="micov_vtr_sex">Sex</string>
    <string name="micov_vtr_v_RA01_1">First vaccination against RA01</string>
    <string name="micov_vtr_v_RA01_2">Second vaccination against RA01</string>
    <string name="micov_vtr_pid_PPN">ID with pasport number</string>
    <string name="micov_vtr_pid_DL">ID with driver’s license number</string>
    <string name="micov_att_1D47_vaccinated">Indication of vaccination against Yellow Fever</string>
    <string name="micov_att_RA01_vaccinated">Indication of vaccination against COVID-19</string>
    <string name="micov_att_RA01_test">Indication of test event for COVID-19</string>
    <string name="micov_att_safeEntry_Leisure">Safe entry indication</string>
    <string name="micov_att_fac">Facial Image</string>
    <string name="micov_att_fni">Family Name Initial</string>
    <string name="micov_att_gni">Given Name Initial</string>
    <string name="micov_att_by">Birth Year</string>
    <string name="micov_att_bm">Birth Month</string>
    <string name="micov_att_bd">Birth Day</string>
    <string name="item_settings">Settings</string>
    <string name="bt_close_connection">Close Connection</string>
    <string name="txt_document_type">Document type</string>
    <string name="txt_document_name">Document name</string>
    <string name="txt_storage_implementation">Storage implementation</string>
    <string name="txt_keystore_implementation">Secure Area</string>
    <string name="txt_user_authentication">Use user authentication</string>
    <string name="txt_number_mso">Number of Authentication Keys</string>
    <string name="txt_max_use_mso">Max use per Authentication Key</string>
    <string name="label_issuer">Issuer</string>
    <string name="label_user_auth">User Auth</string>
    <string name="label_hardware_backed">Hardware Backed</string>
    <string name="bt_show_data">Show Data Elements</string>
    <string name="btn_send_data">Send Data</string>
    <string name="bt_present_documents_reverse_engagement">Present with\nReverse Engagement</string>
    <string name="txt_reverse_engagement_description">Scan QR code from mdoc reader application.\n\nNOTE: This is not supported for ISO 18013-7, only 23220-4</string>
    <string name="menu_wallet">Mdoc Holder</string>
    <string name="menu_add_document">Add Document</string>
    <string name="menu_add_self_signed">Add Self Signed Document</string>
    <string name="menu_reverse_engagement">Reverse Engagement</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">Settings</string>
    <string name="title_presentation_history">mDL Presentation History</string>
    <string name="tap_to_scan_nfc">NFC tap with mdoc reader</string>
    <string name="documents_pager_empty_view_title">No Documents</string>
    <string name="documents_pager_empty_view_message">Start by adding new one</string>
    <string name="txt_card_art">Card art</string>
    <string name="unique_identifier">Unique Identifier</string>
    <string name="birth_family_name">Family Name at Birth</string>
    <string name="birth_family_name_national_characters">Family Name at Birth in national characters</string>
    <string name="first_name_at_birth">First Name at Birth</string>
    <string name="first_name_at_birth_national_characters">First Name at Birth in national characters</string>
    <string name="gender">Gender</string>
    <string name="facial_portrait">PID portrait</string>
    <string name="biometric_template_finger">Fingerprint</string>
    <string name="age_over_13">Age over 13?</string>
    <string name="age_over_16">Age over 16?</string>
    <string name="age_over_60">Age over 60?</string>
    <string name="age_over_65">Age over 65?</string>
    <string name="age_over_68">Age pver 68?</string>
    <string name="document_type_mdl">mDL</string>
    <string name="document_type_mvr">mVR</string>
    <string name="document_type_micov">micov</string>
    <string name="document_type_eu_pid">euPid</string>
    <string name="document_color_green">Green</string>
    <string name="document_color_yellow">Yellow</string>
    <string name="document_color_blue">Blue</string>
    <string name="document_color_red">Red</string>
    <string name="keystore_android">Android Keystore</string>
    <string name="keystore_software">Software Keystore</string>
    <string name="secure_area_not_implemented">Secure Area Not Implemented</string>
    <string name="keystore_android_user_auth_timeout">Timeout seconds</string>
    <string name="keystore_software_passphrase_hint">Passphrase (optional)</string>
    <string name="user_authentication_on">Require User Authentication</string>
    <string name="user_authentication_off">No User Authentication</string>
    <string name="user_auth_type_allow_lskf">Allow LSKF unlocking</string>
    <string name="user_auth_type_allow_biometric">Allow biometric unlocking</string>
    <string name="user_auth_use_strong_box">Use StrongBox</string>
    <string name="mdoc_authentication_label">mdoc authentication</string>
    <string name="authentication_key_curve_label">Authentication Key Curve</string>
    <string name="document_info_counter">Counter</string>
    <string name="document_info_valid_from">Valid from</string>
    <string name="document_info_valid_until">Valid until</string>
    <string name="document_info_issuer_data">Issuer data</string>
    <string name="document_info_issuer_data_bytes">%1$d bytes</string>
    <string name="document_info_usage_count">Usage count</string>
    <string name="document_info_key_purposes">Key Purposes</string>
    <string name="document_info_ec_curve">EcCurve</string>
    <string name="delete_document_prompt_title">Delete Confirmation</string>
    <string name="delete_document_prompt_message">Are you sure you want to delete the document?</string>
    <string name="delete_document_deleted_message">Document Deleted!</string>
    <string name="passphrase_prompt_title">Passphrase Required</string>
    <string name="passphrase_prompt_hint">Credential Passphrase</string>
</resources>