<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/wallet"
        android:enabled="true"
        android:icon="@drawable/ic_wallet"
        android:title="@string/menu_wallet" />

    <item
        android:id="@+id/add"
        android:enabled="true"
        android:icon="@drawable/ic_add_document"
        android:title="@string/menu_add_document" />

    <item
        android:id="@+id/present"
        android:enabled="true"
        android:icon="@drawable/ic_present_document"
        android:title="@string/menu_present_document" />

    <item
        android:id="@+id/settings"
        android:enabled="true"
        android:icon="@drawable/ic_settings"
        android:title="@string/menu_settings" />
</menu>