<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="fragment"
            type="com.android.mdl.app.fragment.DocumentDetailFragment" />

        <variable
            name="document"
            type="com.android.mdl.app.document.Document" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.DocumentDetailFragment">

        <TextView
            android:id="@+id/tv_label_user_visible_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/label_document_name"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_user_visible_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@{document.userVisibleName}"
            app:layout_constraintBottom_toBottomOf="@id/tv_label_user_visible_name"
            app:layout_constraintStart_toEndOf="@id/tv_label_user_visible_name"
            app:layout_constraintTop_toTopOf="@id/tv_label_user_visible_name"
            tools:text="Erika" />

        <TextView
            android:id="@+id/tv_label_document_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/label_document_type"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_label_user_visible_name" />

        <TextView
            android:id="@+id/tv_document_tyoe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@{document.docType}"
            app:layout_constraintBottom_toBottomOf="@id/tv_label_document_type"
            app:layout_constraintStart_toEndOf="@id/tv_label_document_type"
            app:layout_constraintTop_toTopOf="@id/tv_label_document_type"
            tools:text="mdl" />

        <TextView
            android:id="@+id/tv_label_date_provisioned"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/label_date_provisioned"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_document_tyoe" />

        <TextView
            android:id="@+id/tv_date_provisioned"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:displayDateTime="@{document.dateProvisioned}"
            app:layout_constraintBottom_toBottomOf="@id/tv_label_date_provisioned"
            app:layout_constraintStart_toEndOf="@id/tv_label_date_provisioned"
            app:layout_constraintTop_toTopOf="@id/tv_label_date_provisioned"
            tools:text="dd-MM-yyyy" />

        <TextView
            android:id="@+id/tv_label_date_check_update"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/label_date_check_update"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_date_provisioned" />

        <TextView
            android:id="@+id/tv_date_check_update"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:displayDateTime="@{document.dateCheckForUpdate}"
            app:layout_constraintBottom_toBottomOf="@id/tv_label_date_check_update"
            app:layout_constraintStart_toEndOf="@id/tv_label_date_check_update"
            app:layout_constraintTop_toTopOf="@id/tv_label_date_check_update"
            tools:text="dd-MM-yyyy" />

        <TextView
            android:id="@+id/tv_label_refresh_auth_keys"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/label_refresh_auth_keys"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_date_check_update" />

        <TextView
            android:id="@+id/tv_date_refresh_auth_keys"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:displayDateTime="@{document.dateRefreshAuthKeys}"
            app:layout_constraintBottom_toBottomOf="@id/tv_label_refresh_auth_keys"
            app:layout_constraintStart_toEndOf="@id/tv_label_refresh_auth_keys"
            app:layout_constraintTop_toTopOf="@id/tv_label_refresh_auth_keys"
            tools:text="dd-MM-yyyy" />

        <Button
            android:id="@+id/bt_refresh_auth_keys"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:onClick="@{() -> fragment.onRefreshAuthKeys()}"
            android:text="@string/bt_refresh_auth_keys"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_refresh_auth_keys" />

        <Button
            android:id="@+id/bt_check_updates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:onClick="@{() -> fragment.onCheckUpdate()}"
            android:text="@string/bt_check_for_update"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_refresh_auth_keys" />

        <Button
            android:id="@+id/bt_delete"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:onClick="@{() -> fragment.onDelete()}"
            android:text="@string/bt_delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_check_updates" />

        <!-- check automatically for auth keys-->

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>